--- a/index.html
+++ b/index.html
@@ -65,20 +65,20 @@
             <b><span style=" font-family:Camar; font-size: 20px"> Sekilas tentang segitiga</b>
 
 
-                <p align="justify"> <span style="font-family:Camar; font-size: 18px"> segitiga adalah nama suatu bentuk yang dibuat dari tiga sisi yang berupa garis lurus dan tiga sudut.
+                <p align="left"> <span style="font-family:Camar; font-size: 18px"> segitiga adalah nama suatu bentuk yang dibuat dari tiga sisi yang berupa garis lurus dan tiga sudut.
                 </span></p>
 
                 <b><span style=" font-family:Camar; font-size: 20px"> macam macam jenis segitiga</b>
 
-                    <p align="justify"> <span style="font-family:Sageo UI Light; font-size: 18px"> Macam-Macam Segitiga Menurut Sudut dan Sisinya, Ketahui Cirinya Sifat paling penting dari segitiga adalah jumlah sudut dalam segitiga sama dengan 180 derajat. Untuk macam segitiga dan sifatnya dari sudut sendiri terdiri atas segitiga siku-siku, lancip, dan tumpul.
+                    <p align="left"> <span style="font-family:Sageo UI Light; font-size: 18px"> Macam-Macam Segitiga Menurut Sudut dan Sisinya, Ketahui Cirinya Sifat paling penting dari segitiga adalah jumlah sudut dalam segitiga sama dengan 180 derajat. Untuk macam segitiga dan sifatnya dari sudut sendiri terdiri atas segitiga siku-siku, lancip, dan tumpul.
                     </span></p>
                 
                     <b><span style=" font-family:Currier New; font-size: 20px"> Sejarah segitiga</b>
 
-                        <p align="justify"> <span style="font-family:Currier New; font-size: 16px"> Sejarah Segitiga Pascal Gambaran awal tentang sebuah segi tiga pekali binomial muncul pada abad ke-10 dengan ulasan dalam Chandas Shastra, sebuah buku India purba dalam prosodi bahasa Sanskrit yang ditulis oleh Pingala antara abad ke-5–ke-2 SM.
+                        <p align="left"> <span style="font-family:Currier New; font-size: 16px"> Sejarah Segitiga Pascal Gambaran awal tentang sebuah segi tiga pekali binomial muncul pada abad ke-10 dengan ulasan dalam Chandas Shastra, sebuah buku India purba dalam prosodi bahasa Sanskrit yang ditulis oleh Pingala antara abad ke-5–ke-2 SM.
                             </span></p>
                             <b><span style=" font-family:Currier New; font-size: 20px"> Sekilas tentang pembuat web </b>
-                                <p align="justify"> <span style="font-family:Currier New; font-size: 16px"> Web ini hasil kolaborasi antara Ais Arina Rahmawati mahasiswa pendidikan matematika universitas negeri semarang dengan Nur Habibie Iftah Kurniawan mahasiswa Teknik Informatika Institut Teknologi Telkom Purwokerto, web ini di buat dengan tujuan untuk mempermudah para pencari jawaban luas segitiga secara instant dengan kalkulator dan juga memperkenalkan bahwa kalkulator yang sejatinya hanya dibuat dalam bentuk mobile biisa juga dibuat dalam bentuk website dengan menggunakan pemahaman pemrograman web
+                                <p align="left"> <span style="font-family:Currier New; font-size: 16px"> Web ini hasil kolaborasi antara Ais Arina Rahmawati mahasiswa pendidikan matematika universitas negeri semarang dengan Nur Habibie Iftah Kurniawan mahasiswa Teknik Informatika Institut Teknologi Telkom Purwokerto, web ini di buat dengan tujuan untuk mempermudah para pencari jawaban luas segitiga secara instant dengan kalkulator dan juga memperkenalkan bahwa kalkulator yang sejatinya hanya dibuat dalam bentuk mobile biisa juga dibuat dalam bentuk website dengan menggunakan pemahaman pemrograman web
                                     </span></p></article>
 
                                     <footer> Copyrights &copy; Ais Arina Rahmawati -PEND MATH-UNNES-  X - Nur Habibie Iftah Kurniawan -IF-RISTEK-ITTP-  2021 -<script type="text/javascript">var AWTahun = new Date;document.write(AWTahun.getFullYear());</script></footer></footer>
